src/test/deca/context/invalid/test_error_3.25-4.deca
// Description:
//    Programme soulevant l'erreur (3.25)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 12 : Expression booléenne attendue (règle 3.25)
//
// Historique:
//    cree le 12/01/2022

{
   while("a") {
   }
}